* HTML controls: HtmlSelect, HtmlTable, HtmlInputFile
* Instantiate HTML controls by XPath in addition to ID
* Add information on SF trackers to docs
* Add to doc page? NUnitAsp innards discussion at http://blogs.pingpoet.com/overflow/archive/2004/03/18/474.aspx
* Add FAQ? Watir vs. NUnitAsp


ASP.NET 2.0 issues:
* VS.NET 2005 default DOCTYPE has changed--causes parser to do a slow web lookup
* MasterPage tester needed


Before release:
* Update build: remove NUnit, put NUnitAdapter.cs in bin/ dir
* Copy new constructors to WebFormTester and HtmlAnchorTester/HtmlInputCheckBoxTester
* Finish migration guide.
* Remove ControlTester.EnterInputValue/RemoveInputValue?  Make AssertEnabled explicit in tester?
* Make "xxxTag" properties on AspTesters public--map them to HtmlTag
* Add support for auto-postback to RadioButtonTester
* Remove 'Tag' property from AspControlTester; add HtmlTag
* Refer to David Gardiner's code-generation tool in documentation: https://sourceforge.net/projects/nunitaspcodegen/
* Incorporate "Advanced NUnitAsp" video into documentation page
* Remove "Enabled" check on all controls.  Document this.  Tracker #1262940.
* Update all [Obsolete] attributes to say "will be removed after <date>".
* Document change from BodyNoTags to RenderedInnerHtml.  Obsolete methods in: ListItemTester; Changed behavior of: ListItemCollectionTester.FindByText, ListItemTester.Value (edge case)


Changes in CVS:
Produced by Jim Shore.
* Changed default HttpClient.UserAgent to be the same as Internet Explorer 6.
* Added FAQ: How to test sites that require authentication.  Credit to Jim Shore.
* Removed NUnit requirement.  NUnitAsp now works with any test framework.  Credit to Jim Shore.
* Augmented Browser property with HttpClient.Default static property.  Credit to Jim Shore.
* Augmented CurrentWebForm property with single-parameter constructor for testers.  Credit to Jim Shore.